Introduce errorprone and fix errors and warnings